Revision history for CGI-Info

0.94
	number types can also have min and max values
	Now logs all messages in the array messages.  The warnings array has been removed.

0.93	Wed Feb 26 09:47:02 EST 2025
	Use facility local0
	Improved upload filename generation to prevent overwriting
	allow() now supports full rule schemas
	Croak rather than carp on expect, and remove all its code
	Intercepted arguments that result in 422 now raise LOG_NOTICE rather than LOG_INFO

0.92	Thu Feb 13 15:16:57 EST 2025
	Return empty string with warnings_as_string() rather than undef when no warnings

0.91	Mon Feb 10 14:32:57 EST 2025
	Added t/waf.t to test the Web Application Firewall
	params(): instead of cleaning up XSS, now sets them to 403 and doesn't pass the values back
	Added warnings_as_string()
	Added the raw option to as_string()

0.90	Tue Feb  4 08:57:49 EST 2025
	Ensure status is set before calling _warn so it's not lost (some 403s were being lost)
	Try harder to call Google a search_engine
	Allow the logger to be a filename

0.89	Tue Jan 14 15:45:16 EST 2025
	Fix http://www.cpantesters.org/cpan/report/048c5109-6c77-1014-8029-e79fc7de0390

0.88	Mon Jan 13 09:33:24 EST 2025
	Improved arg checking
	Merge https://github.com/nigelhorne/CGI-Info/pull/21 (plicease)
	Added _get_env()

0.87	Wed Dec 18 11:06:09 EST 2024
	Test warnings()
	Allow the logger to be a ref to code
	Fix is_mobile() default return code
	Added t/30-basics.t
	upload_dir must now be in, or a subdir of, tmpdir()

0.86	Mon Nov 25 09:17:30 EST 2024
	Ensure correct message is logged on SQL injection attempt
	Remember warnings in the warnings array - added warnings() method

0.85	Sun Nov 17 09:49:52 EST 2024
	Send back HTTP code 422 when argument fails "allow"
	Added come comments and small optimisations
	new(): Use Scalar::Util to verify it's an object
	Refactor AUTOLOAD
	Avoid re-importing modules
	Refactor status() and cookie() and add more tests
	Added t/as_string.t

0.84	Fri Oct 18 08:21:05 EDT 2024